# timekeeper

./: .gitignore  README.md  pyproject.toml
tests/: test_commands.py  test_memory_todo_repository.py  test_migrations.py  test_sqllite_todo_repository.py
timekeeper/: config.py  main.py  migrations.py
timekeeper/adapters/todos/: memory.py  sqllite.py
timekeeper/components/: custom_ft.py  icons.py  layout.py  navigation.py  work_items.py
timekeeper/domain/todos/: commands.py  interfaces.py  queries.py
